# mev-scout

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLI_TUTORIAL.md  Cargo.toml  FOLDER_STRUCTURE_PLAN.md  GUIDE.md  PHASE_5_PLAN.md  PLAN-accuracy-improvement.md  PLAN-chain-profitability.md  PLAN-codebase-review.md  PLAN-curve-balancer-pool-types.md  PLAN-offline-chain-storage.md  PLAN-phase4-completion.md  PLAN_competitor_detection.md  PLAN_folder_restructure.md  PLAN_live_mode.md  PLAN_mevlog_indexer_improvements.md  PLAN_mevlog_tests.md  PLAN_onchain_execution.md  RPC_MULTI_PROVIDER_PLAN.md  SIMPLIFY.md  TODO-BENCHMARK.md  check_db.rs  mev-scout.example.toml  mev-scout.toml  mev_strategies_analysis_summary.md  mev_strategies_complete.md  mev_strategies_complete_v2.md  opencode.json
cli/: Cargo.toml
cli/src/: cli.rs  display.rs  main.rs  overrides.rs
cli/src/commands/: audit.rs  config.rs  discover.rs  dune_check.rs  dune_find_blocks.rs  dune_query.rs  fact_check.rs  fetch.rs  live.rs  mod.rs  replay.rs  report.rs  run.rs
core/: Cargo.toml
core/src/: aggregate.rs  cache.rs  cli.rs  coingecko.rs  config.rs  fact_check.rs  fetch.rs  gas_distribution.rs  lib.rs  live.rs  replay.rs  resolver.rs  rpc.rs  run.rs  scan.rs  types.rs  utils.rs  validation.rs
core/src/cache/: mod.rs  store.rs  token_cache.rs
core/src/config/: defaults.rs  mod.rs  settings.rs  validation.rs
core/src/data/: types.rs
core/src/dune/: audit.rs  client.rs  cross_validate.rs  mod.rs  (+3 more)
core/tests/: arbitrage.rs  config.rs  dune_api.rs  e2e.rs  e2e_discovery.rs  integration.rs  liquidation.rs  replay.rs  sandwich.rs
(+144 files in other folders)
