[package]
name = "mev-scout-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mev-scout"
path = "src/main.rs"

[dependencies]
mev-scout-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing = "0.1"
indicatif = "0.17"
comfy-table = "7"
alloy = { version = "2", features = ["consensus"] }
serde_json = "1"
