[package]
name = "mev-scout-core"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }

# Data ingestion & caching
alloy = { version = "2", features = ["providers", "rpc-types", "transport-http", "rpc-client", "consensus", "reqwest-default-tls", "signers", "dyn-abi", "rlp", "eips"] }
rusqlite = { version = "0.31", features = ["bundled"] }
bincode = "1"
futures = "0.3"
url = "2"

# CSV parsing for historical prices
csv = "1"


# Random selection for weighted provider pick
rand = "0.9"

# EVM state replay
revm = "40.0.3"
reqwest = { version = "0.12", features = ["json"] }

# Signature resolution
hex = "0.4"
ruzstd = "0.7"
